@@ -6,7 +6,7 @@ package WIP.sound;
 
 import static WIP.arcadeflex.fucPtr.WriteHandlerPtr;
 import static common.ptr.*;
-import static WIP.arcadeflex.libc_v2.sprintf;
+import static common.libc.cstdio.*;
 import static old.arcadeflex.osdepend.logerror;
 import static WIP.mame.mame.Machine;
 import static WIP.mame.sndintrf.snd_interface;
