@@ -15,6 +15,7 @@ import static WIP.arcadeflex.fucPtr.*;
 import static WIP.arcadeflex.libc_v2.*;
 import static old.mame.common.*;
 import static common.ptr.*;
+import static common.libc.cstdio.*;
 
 public class k007232 extends snd_interface {
 
