@@ -22,7 +22,7 @@ package WIP.sound;
 
 import static WIP.arcadeflex.libc_v2.BytePtr;
 import static common.ptr.*;
-import static old.arcadeflex.libc_old.sprintf;
+import static common.libc.cstdio.*;
 import static old.arcadeflex.osdepend.logerror;
 import static old.mame.common.readsamples;
 import static WIP.mame.mame.Machine;
