@@ -7,7 +7,7 @@ package WIP2.sound;
 import WIP.mame.sndintrfH;
 import WIP2.sound.fm_helpers.FM_OPL;
 import static WIP.arcadeflex.fucPtr.*;
-import static WIP.arcadeflex.libc_v2.*;
+import static common.libc.cstdio.*;
 import static old.mame.cpuintrfH.*;
 import static WIP.mame.mame.Machine;
 import static WIP.mame.sndintrf.*;
